Added home page layout which contains a demo section of the plugin and buttons for download, documentation and github.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,47 @@
 <html>
     <head>
         <title>Animate Display Property</title>
+        <meta name="description" content="">
+        <meta name="keywords" content="">
+        <meta name="author" content="Mohammed Bilal Shareef">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link type="text/css" rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed:400,600" rel="stylesheet">
     </head>
     <body>
-        <h1>Website Under Construction</h1>
+        <div class="home-wrapper">
+            <div class="adp-logo-wrapper">
+                <h1>Animate Display Property</h1>
+            </div>
+            <p>A JavaScript micro plugin to add transition effects for the CSS display property.</p>
+            <div class="controls-wrapper">
+                <select>
+                    <option value="fade">Fade</option>
+                    <option value="slide-left">Slide Left</option>
+                    <option value="slide-right">Slide Right</option>
+                    <option value="slide-up">Slide Up</option>
+                    <option value="slide-down">Slide Down</option>
+                    <option value="zoom-in">Zoom In</option>
+                    <option value="zoom-out">Zoom Out</option>
+                    <option value="rotate-left">Rotate Left</option>
+                    <option value="rotate-right">Rotate Right</option>
+                    <option value="flip-up">Flip Up</option>
+                    <option value="flip-down">Flip Down</option>
+                    <option value="flip-left">Flip Left</option>
+                    <option value="flip-right">Flip Right</option>
+                </select>
+                <button type="button" class="button-1">Show</button>
+                <button type="button" class="button-1">Hide</button>
+            </div>
+            <div class="horizontal-separator"></div>
+            <div class="buttons-wrapper">
+                <button type="button" class="button-2 blue">Download</button>
+                <button type="button" class="button-2">Docs</button>
+                <button type="button" class="button-2 red">Github</button>
+            </div>
+            <div class="credit-info">Made by <a href="https://bilalshareef.github.io/" target="_blank">Mohammed Bilal Shareef</a></div>
+        </div>
+        
+        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
