Added toggle method demo in the home page.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 </select>
                 <button type="button" id="show-button" class="button-1">Show</button>
                 <button type="button" id="hide-button" class="button-1">Hide</button>
+                <button type="button" id="toggle-button" class="button-1">Toggle</button>
             </div>
             <div class="horizontal-separator"></div>
             <div class="buttons-wrapper">
