Added meta description and meta keyword in the pages of the website.

--- a/documentation.html
+++ b/documentation.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Documentation - Animate Display Property</title>
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="description" content="Documentation of Animate Display Property plugin which lists the details on how to download and use the plugin. Also sample code snippets included in the page to create new animation effects.">
+        <meta name="keywords" content="Documentation of Animate Display Property, Docs of Animate Display Property, ADP docs, ADP user guide, Animate Display Property installation, CSS display transition docs, CSS display animation docs">
         <meta name="author" content="Mohammed Bilal Shareef">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/style.css">
