--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Animate Display Property</title>
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="description" content="Animate Display Property is a JavaScript micro plugin to add transition effects for the CSS display property. This plugin uses CSS3 animations to acheive transition effects when an element's display property changes.">
+        <meta name="keywords" content="Animate Display Property, CSS display transitions, CSS transition effects, CSS animation effects, animation effects, transition effects, animations, transitions, CSS transitions demo, CSS animations demo, ADP, ADP JS">
         <meta name="author" content="Mohammed Bilal Shareef">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/style.css">
