Added google analytics code for the website.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
     <head>
+        <!-- Global Site Tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106873852-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments)};
+            gtag('js', new Date());
+            
+            gtag('config', 'UA-106873852-1');
+        </script>
         <title>Animate Display Property</title>
         <meta name="description" content="Animate Display Property is a JavaScript micro plugin to add transition effects for the CSS display property. This plugin uses CSS3 animations to acheive transition effects when an element's display property changes.">
         <meta name="keywords" content="Animate Display Property, CSS display transitions, CSS transition effects, CSS animation effects, animation effects, transition effects, animations, transitions, CSS transitions demo, CSS animations demo, ADP, ADP JS">
