--- a/documentation.html
+++ b/documentation.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html>
     <head>
+        <!-- Global Site Tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106873852-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments)};
+            gtag('js', new Date());
+            
+            gtag('config', 'UA-106873852-1');
+        </script>
         <title>Documentation - Animate Display Property</title>
         <meta name="description" content="Documentation of Animate Display Property plugin which lists the details on how to download and use the plugin. Also sample code snippets included in the page to create new animation effects.">
         <meta name="keywords" content="Documentation of Animate Display Property, Docs of Animate Display Property, ADP docs, ADP user guide, Animate Display Property installation, CSS display transition docs, CSS display animation docs">
