Added provision to test dist files by loading css and js files dynamically in test/index.html file.

--- a/test/index.html
+++ b/test/index.html
@@ -67,22 +67,7 @@
                 margin-right: auto;
             }
         </style>
-        <link type="text/css" rel="stylesheet" href="../src/effects/fade.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/flip-down.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/flip-left.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/flip-right.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/flip-up.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/rotate-left.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/rotate-right.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/slide-down.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/slide-left.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/slide-right.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/slide-up.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/zoom-in.css">
-        <link type="text/css" rel="stylesheet" href="../src/effects/zoom-out.css">
-        <link type="text/css" rel="stylesheet" href="../src/adp-hide.css">
-
-        <script type="text/javascript" src="../src/adp.js"></script>
+        <script type="text/javascript" src="load-files.js"></script>
     </head>
     <body>
         <div class="home-wrapper">
