--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments)};
             gtag('js', new Date());
-            
             gtag('config', 'UA-106873852-1');
         </script>
         <title>Animate Display Property</title>
@@ -48,12 +47,12 @@
             <div class="horizontal-separator"></div>
             <div class="buttons-wrapper">
                 <a href="https://github.com/bilalshareef/animate-display-property/releases/download/v1.0.1/animate-display-property-1.0.1.zip" class="button-2 blue">Download</a>
-                <a href="documentation.html" class="button-2">Docs</a>
+                <a href="docs/" class="button-2">Docs</a>
                 <a href="https://github.com/bilalshareef/animate-display-property" target="_blank" class="button-2 red">Github</a>
             </div>
             <div class="credit-info">Made by <a href="https://bilalshareef.github.io/" target="_blank">Mohammed Bilal Shareef</a></div>
         </div>
-        
+
         <script type="text/javascript" src="js/adp.min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
     </body>
